# TotalCommander

./: README.md  TOTALCMD.chm
TCMatch/TCMatch_2.3.0/: pluginst.inf
TCMatch/TCMatch_2.3.1/: TCMatch.ini
TCMatch/TCMatch_2.3.1/Source/: deelx.h  tcmatch.aps
TCMatch/TCMatch_2.3.1/Source/dll/: tcmatch.ahk
TCMatch/TCMatch_2.3.1/Source/doc/: tcmatch_hu.docx  tcmatch_ko.docx
TCMatch/TCMatch_ghisler_20260518/: pluginst.inf
TCMatch_2.3.1/Source/: tcmatch.cpp  tcmatch.h  tcmatch.rc  tcmatch.sln  tcmatch.vcproj  tcmatch.vcxproj  tcmatch.vcxproj.filters  wdx.cpp  wdx.h
TCMatch_2.3.1/Source/dll/: Use new tcmatch.ahk
TCMatch_2.3.1/Source/doc/: tcmatch.docx  tcmatch_de.docx
TCMatch_ghisler_20260518/: README.md
TCMatch_ghisler_20260519/: README.md
WCX/Total7zip/: Readme.rtf  Total7Zip.lng  Total7zip.xml
WDX/LotsOfHashes/: LotsOfHashes.ini  LotsOfHashes.wdx64  readme.txt
WDX/ShellDetails/: ShellDetails.ini  history.txt  readme.htm
WDX/TextLine/: TextLine.ini  TextLine.wdx  TextLine.wdx64
WDX/TextLine/Readme/: History.txt  Readme.Eng.txt  Src.rar
WDX/WinScriptsAdv/: Changes.txt  Options.ini  PowerShell - How to speed up startup.txt  Python scripts - How To.txt  ReadMe.txt  WinScriptsAdv.wdx64
WDX/WinScriptsAdv/Scripts/: CheckEncoding.vbs  CheckSum.ps1  CheckSum.vbs  DayOfWeek.vbs  FileOwner.vbs  Hash.ahk  Html_info.vbs  MinutesAgo.vbs  RaptVersion.ahk  RaptVersion.ps1  RaptVersion.vbs  ReadFileLines.vbs  SearchInFile.vbs  Signature.vbs  testAHK.ahk  testAutoIt.au3  testJS.js  testPHP.php  testPerl.pl  testPowerShell.ps1  testPython.py
WDX/WinScriptsAdv/Scripts/Get File Property/: FGP.ahk  File Property.ahk  FileGetInfo.ahk
WDX/kbyte/: kbyte.wdx  kbyte.wdx64  readme_rus.txt
WLX/AnyCmd/: AnyCmd.ini  AnyCmd.wlx64  RaptVer.vbs
WLX/AppLoader/: AppLoader.ini  AppLoader.wlx64
WLX/AppLoader/Readme/: English.html  KeyCodes.html
WLX/AppLoader/Readme/css/: main.css
WLX/CADView/: BigFont.xml  CADView.ini  Changes.txt  Readme.txt
WLX/DXFViewer/: README.md  Readme.txt  dxfViewer.wlx  dxfViewer.wlx64  pluginst.inf
WLX/DXFViewer/Source/: .gitignore  CMakeLists.txt
WLX/DXFViewer/Source/package/: Readme.txt
WLX/DXFViewer/Source/src/: dllmain.cpp  dxf_collector.h  dxf_renderer.h  listplug.h  resource.h  test_dxf.cpp  wlx_dxf.cpp  wlx_dxf.def  wlx_dxf.rc
WLX/FileInfo/: FileInfo.ini  FileInfo.wlx64  Readme.txt
WLX/FileInfo/Source/: README.md
WLX/FileInfo/Source/src/: licence.txt
WLX/FileInfo/Source/src/common/: StdAfx.h  fdate.cpp  fdate.h  ffile.cpp  ffile.h  verwin.cpp  verwin.h
WLX/FileInfo/Source/src/wincmd/common/: HyperLink.cpp  ListWnd.cpp  ListWnd.h  ListpagePty.cpp  MEMORYMAPPEDFILE.CPP  PropertySheetRz.cpp  PropertySheetRz.h  ResizePage.cpp  TCutils.cpp  TCutils.h  list.aps  listpagepty.h  listplug.h  memorymappedfile.h  ocx.cpp  resizepage.h  resource.h  stdafx.h  wait.cpp  wait.h  wcxapi.h  wcxhead.h
WLX/FileInfo/Source/src/wincmd/fileinfo/: About.cpp  About.h  Fileinfo.cdr  FileinfoListWnd.cpp  FileinfoListWnd.h  ListDlg.cpp  ListDlg.h  ListExport.cpp  ListExport.h  ListOCX.cpp  ListOcx.h  ListSheet.cpp  ListSheet.h  Option.cpp  Option.h  PageTree.cpp  PageTree.h  ReadMe.txt  StdAfx.h  TCOptions.h  TypeLib.cpp  TypeLib.h  UM.C  UM.H  delay.h  (+26 more)
WLX/HTMLView/: HTMLView.ini  History.txt  Readme.txt
WLX/ICLView/: ICLView.ini  ICLView.wlx64  Readme.txt
WLX/Imagine/: Imagine.chm  Imagine.ini  Imagine.wcx64  Imagine.wdx64  Imagine.wlx64  Readme.txt  Whatsnew.txt
WLX/Imagine/Language/: SimplifiedChinese.lng
WLX/Imagine/Plugin/: dir.txt
WLX/TCSumatraPDF/: Readme.txt  SumatraPDF-settings.txt  SumatraPDF.ini  SumatraPDF.wlx64
WLX/sLister/: SumatraPDF-settings.txt  sLister.ini
WLX/uLister/: Formats.txt  Readme.txt  uLister.ini  uLister.wlx64
WLX/uLister/.oit/: D4Xvv0DX6Yy.d  D4Xvv0DX6Yy.opt
WLX/uLister/Redist/: oit_font_metrics.db  oitnsf.id
WLX/uLister/Redist/oit_font_metrics.db-journal/: log.0000000001
(+49 files in other folders)
